--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
-    "vite": "^5.0.0"
+    "daisyui": "^4.4.19",
+    "tailwindcss": "^3.3.6",
+    "vite": "^5.0.0",
+    "vue-router": "4"
   }
 }
