--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "vue-axios": "^3.5.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@vitejs/plugin-vue": "^4.5.0",
+    "autoprefixer": "^10.4.16",
     "daisyui": "^4.4.19",
+    "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
     "vite": "^5.0.0",
     "vue-router": "4"
