--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "sweetalert2": "^11.10.2",
     "vue": "^3.3.8",
     "vue-axios": "^3.5.2"
   },
