--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^5",
+    "@vuepic/vue-datepicker": "^7.4.1",
     "axios": "^1.6.2",
     "sweetalert2": "^11.10.2",
     "vue": "^3.3.8",
